Migrate project to Maven using IntelliJ