@@ -3,6 +3,7 @@ package puzzle;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -59,28 +60,28 @@ class BoardTest {
 	void boardFindsCluesForOneLine() {
 		Board board = new Board("image", 1);
 		var actual = board.findHints('A', 0, new Hints(Arrays.asList("IMAGE", "BOOK")));
-		assertEquals(Arrays.asList("IMAGE"), actual);
+		assertEquals(List.of("IMAGE"), actual);
 	}
 
 	@Test
 	void boardFindsCluesForTwoLines() {
 		Board board = new Board("image", 2);
 		var actual = board.findHints('A', 0, new Hints(Arrays.asList("BOOK", "IMAGE")));
-		assertEquals(Arrays.asList("IMAGE"), actual);
+		assertEquals(List.of("IMAGE"), actual);
 	}
 
 	@Test
 	void boardFindsCluesForFirstWord() {
 		Board board = new Board("book image", 2);
 		var actual = board.findHints('A', 0, new Hints(Arrays.asList("IMAGE", "BOOK")));
-		assertEquals(Arrays.asList("BOOK"), actual);
+		assertEquals(List.of("BOOK"), actual);
 	}
 
 	@Test
 	void boardFindsCluesForSecondWord() {
 		Board board = new Board("image book", 2);
 		var actual = board.findHints('B', 1, new Hints(Arrays.asList("IMAGE", "BOOK")));
-		assertEquals(Arrays.asList("BOOK"), actual);
+		assertEquals(List.of("BOOK"), actual);
 	}
 	
 	@Test
