@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -12,21 +13,21 @@ class HintsTest {
 	@Test
 	void emptyHintsFindsNothing() {
 		var hints = new Hints(new ArrayList<>());
-		var actual = hints.find(Arrays.asList("x"));
+		var actual = hints.find(List.of("x"));
 		assertEquals(0, actual.size());
 	}
 
 	@Test
 	void hintsFindsOneSingleLetterWord() {
 		var hints = new Hints(Arrays.asList("I", "A"));
-		var actual = hints.find(Arrays.asList("I"));
-		assertEquals(Arrays.asList("I"), actual);
+		var actual = hints.find(List.of("I"));
+		assertEquals(List.of("I"), actual);
 	}
 	
 	@Test
 	void hintsFindsMultipleSingleLetterWords() {
 		var hints = new Hints(Arrays.asList("I", "A"));
-		var actual = hints.find(Arrays.asList("IA"));
+		var actual = hints.find(List.of("IA"));
 		assertEquals(Arrays.asList("I", "A"), actual);
 	}
 	
@@ -34,14 +35,14 @@ class HintsTest {
 	void hintsFindsNothingWhenWordAndClueLengthMismatch() {
 		var hints = new Hints(Arrays.asList("I", "A"));
 		var actual = hints.find(Arrays.asList("IA", "T"));
-		assertEquals(Arrays.asList(), actual);
+		assertEquals(List.of(), actual);
 	}
 	
 	@Test
 	void hintsFindsMultiLetterMatches() {
 		var hints = new Hints(Arrays.asList("I", "A", "AT"));
 		var actual = hints.find(Arrays.asList("IA", "T"));
-		assertEquals(Arrays.asList("AT"), actual);
+		assertEquals(List.of("AT"), actual);
 	}
 	
 	@Test
